hard-code URL for docs pages (for now)

--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="en-us">
     <head>
         <meta charset="utf-8">
-        <meta http-equiv="refresh" content="0; url=zmq_tokio/index.html">
+        <meta http-equiv="refresh" content="0; url=https://saibatizoku.github.io/zmq-tokio/zmq_tokio/index.html">
+        <script>
+  window.location.href = "https://saibatizoku.github.io/zmq-tokio/zmq_tokio/index.html"
+        </script>
         <title>Page Redirection</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow this <a href='http://example.com'>link to example</a>.
+        If you are not redirected automatically, follow this <a href='https://saibatizoku.github.io/zmq-tokio/zmq_tokio/index.html'>link</a>.
     </body>
 </html>
