--- a/zmq_tokio/static.SNDMORE.html
+++ b/zmq_tokio/static.SNDMORE.html
@@ -49,7 +49,7 @@
                    <a id="toggle-all-docs" href="javascript:void(0)" title="collapse all docs">
                        [<span class='inner'>&#x2212;</span>]
                    </a>
-               </span></span></h1>
+               </span><a class='srclink' href='../src/zmq/lib.rs.html#73' title='goto source code'>[src]</a></span></h1>
 <pre class='rust static'>pub static SNDMORE: <a class="primitive" href="https://doc.rust-lang.org/nightly/std/primitive.i32.html">i32</a><code> = </code><code>
 
 
