fix typo in crate docs

--- a/zmq_tokio/stream/index.html
+++ b/zmq_tokio/stream/index.html
@@ -64,7 +64,7 @@
                            <td><a class="struct" href="struct.MultipartMessageStream.html"
                                   title='struct zmq_tokio::stream::MultipartMessageStream'>MultipartMessageStream</a></td>
                            <td class='docblock-short'>
-                                <p>Single-message stream for sockets.</p>
+                                <p>Multipart-message stream for sockets.</p>
                            </td>
                        </tr></table></section>
     <section id='search' class="content hidden"></section>
