--- a/zmq_tokio/stream/struct.MultipartMessageStream.html
+++ b/zmq_tokio/stream/struct.MultipartMessageStream.html
@@ -50,7 +50,7 @@
                        [<span class='inner'>&#x2212;</span>]
                    </a>
                </span><a class='srclink' href='../../src/zmq_tokio/stream.rs.html#47-49' title='goto source code'>[src]</a></span></h1>
-<pre class='rust struct'>pub struct MultipartMessageStream&lt;'a, T:&nbsp;'a&gt; { /* fields omitted */ }</pre><div class='docblock'><p>Single-message stream for sockets.</p>
+<pre class='rust struct'>pub struct MultipartMessageStream&lt;'a, T:&nbsp;'a&gt; { /* fields omitted */ }</pre><div class='docblock'><p>Multipart-message stream for sockets.</p>
 </div>
                     <h2 id='methods' class='small-section-header'>
                       Methods<a href='#methods' class='anchor'></a>
